--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.anint.anurak.carmemorize"
+        applicationId "com.carmemorize.app"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -29,6 +29,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile project(':sqlcipher-for-android')
-    compile 'com.karumi:dexter:3.0.2'
 
 }
