--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    compile project(':sqlcipher-for-android')
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile project(':sqlcipher-for-android')
-
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'org.parceler:parceler-api:1.1.6'
+    testCompile 'junit:junit:4.12'
 }
