--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.carmemorize.app.activity.MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.carmemorize.app.activity.ListCar" />
-        <activity android:name="com.carmemorize.app.activity.History" />
-        <activity android:name="com.carmemorize.app.activity.Summary" />
-        <activity android:name="com.carmemorize.app.activity.AddCar" />
-        <activity android:name="com.carmemorize.app.activity.AddEnergy" />
-        <activity android:name="com.carmemorize.app.activity.TaxShow" />
-        <activity android:name="com.carmemorize.app.activity.Service" />
-        <activity android:name="com.carmemorize.app.activity.CarShow" />
-        <activity android:name="com.carmemorize.app.activity.ListEnergy"></activity>
+        <activity android:name=".activity.ListCar" />
+        <activity android:name=".activity.History" />
+        <activity android:name=".activity.Summary" />
+        <activity android:name=".activity.AddCar" />
+        <activity android:name=".activity.AddEnergy" />
+        <activity android:name=".activity.TaxShow" />
+        <activity android:name=".activity.Service" />
+        <activity android:name=".activity.CarShow" />
+        <activity android:name=".activity.ListEnergy" />
+        <activity android:name=".activity.EditCarActivity"></activity>
     </application>
 
 </manifest>
